[Frontend] #16 Fixed HTML Character conversion, alot of CSS improvements, fixed some minor bugs

--- a/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
+++ b/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
@@ -2,10 +2,10 @@
 
 <div class="editor-main-container">
   Title:
-  <input #titleArea matInput [(ngModel)]="postData.title">
+  <input class="postCreator-title-field" #titleArea matInput [(ngModel)]="postData.title">
 
   Content:
-  <textarea #contentArea [(ngModel)]="postData.content"></textarea>
+  <textarea class="postCreator-content-field" #contentArea [(ngModel)]="postData.content"></textarea>
 
   <div class="editor-bottom-row">
     <button (click)="postDiscarded()">Abbrechen</button>
