--- a/MeinStudManager/ClientApp/src/app/forum/topic/forum-topic.component.html
+++ b/MeinStudManager/ClientApp/src/app/forum/topic/forum-topic.component.html
@@ -1,41 +1,49 @@
-<h1>Thema</h1>
-
-<button mat-raised-button (click)="navigateBackToTopics()"><- Zurück zu Themen</button>
-
 <!-- Topic View -->
-<div>
+<div class="topicSiteContainer">
+  <h1>Mein Studplaner - Forum</h1>
+
+  <h1 *ngIf="!loadingPosts">{{currentReplies.length}}
+    <ng-container *ngIf="currentReplies.length == 1">Post</ng-container>
+    <ng-container  *ngIf="currentReplies.length != 1">Posts</ng-container>
+  </h1>
+
+  <div class="topicBackContainer">
+    <button class="back-to-topics-topic-btn" mat-raised-button (click)="navigateBackToTopics()"><- Zurück zu Themen</button>
+  </div>
   <mat-spinner style="margin:0 auto;" *ngIf="loadingPosts"></mat-spinner>
 
-  <div *ngFor="let reply of currentReplies" class="reply-container">
+  <div class="postsArea" *ngIf="currentReplies.length > 0">
+    <div *ngFor="let reply of currentReplies" class="reply-container">
 
-    <div class="reply-header-info">
-      <em>am {{reply.creationDate | date: 'dd.MM.yyyy'}}, {{reply.creationDate | date: 'HH:mm:ss'}} Uhr</em>
-      von <b>{{reply.authorName}}</b>
-        <ng-container *ngIf="reply.numberOfEdits > 0">
-          ({{reply.numberOfEdits}} mal Bearbeitet, zuletzt am {{reply.lastEdit | date: 'dd.MM.yyyy'}}, {{reply.lastEdit | date: 'HH:mm:ss'}})
-        </ng-container>
+      <div class="reply-header-info">
+        <em>am {{reply.creationDate | date: 'dd.MM.yyyy'}}, {{reply.creationDate | date: 'HH:mm:ss'}} Uhr</em>
+        von <b>{{reply.authorName}}</b>
+          <ng-container *ngIf="reply.numberOfEdits > 0">
+            ({{reply.numberOfEdits}} mal Bearbeitet, zuletzt am {{reply.lastEdit | date: 'dd.MM.yyyy'}}, {{reply.lastEdit | date: 'HH:mm:ss'}})
+          </ng-container>
+      </div>
+
+      <br><br>
+      <div class="reply-title" [innerHTML]="reply.title"></div>
+
+      <div class="reply-message" [innerHTML]="reply.content"></div>
+      <br>
+      <br>
+
+      <div class="user-options">
+        <button *ngIf="reply.authorId == userId" class="options-btn "mat-flat-button (click)="deletePost(reply)">Post löschen</button>
+        <button *ngIf="reply.authorId == userId" class="options-btn" mat-flat-button (click)="editPost(reply)">Post Bearbeiten</button>
+        <button class="options-btn" mat-flat-button (click)="createAnswer('direct', reply)">Direkt Antwort</button>
+      </div>
+
+      <div class="vote-options">
+        <button class="vote-btn" mat-button (click)="upVote(reply)" [innerHTML]="getUpVoteText(reply.numUpVotes)"></button>
+        <button class="vote-btn" mat-button (click)="downVote(reply)" [innerHTML]="getDownVoteText(reply.numDownVotes)"></button>
+        <button class="vote-btn"  mat-button (click)="removeVote(reply)">Bewertung löschen</button>
+      </div>
     </div>
-
-    <br><br><b>{{reply.title}}</b>
-
-    <br><br>
-    <div class="reply-message" >{{reply.content}}</div>
-    <br>
-    <br>
-
-    <div class="user-options">
-      <button *ngIf="reply.authorId == userId" class="options-btn "mat-flat-button (click)="deletePost(reply)">Post löschen</button>
-      <button *ngIf="reply.authorId == userId" class="options-btn" mat-flat-button (click)="editPost(reply)">Post Bearbeiten</button>
-      <button class="options-btn" mat-flat-button (click)="createAnswer('direct', reply)">Direkt Antwort</button>
-    </div>
-
-    <div class="vote-options">
-      <button class="vote-btn" mat-button (click)="upVote(reply)">up ({{reply.numUpVotes}})</button>
-      <button class="vote-btn" mat-button (click)="downVote(reply)">down ({{reply.numDownVotes}})</button>
-      <button class="vote-btn"  mat-button (click)="removeVote(reply)">Bewertung löschen</button>
-    </div>
-
   </div>
-
-  <button mat-raised-button (click)="createAnswer('new')">Antworten</button>
+  <div class="answerContainer">
+    <button class="answer-btn" mat-raised-button (click)="createAnswer('new')">Antwort schreiben</button>
+  </div>
 </div>
