--- a/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.component.css
+++ b/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.component.css
@@ -1,11 +1,20 @@
 .editor-main-container{
   display: grid;
-  grid-row: 30px 150px 30px;
+  grid-row: 30px 250px 30px;
   column-width: 100%;
-  width: 500px;
+  width: 600px;
 }
 
 .editor-bottom-row{
   display: flexbox;
   text-align: end;
 }
+
+.postCreator-title-field{
+  font-size: 14pt;
+}
+
+.postCreator-content-field{
+  height: 150px;
+}
+
