added todo list, clean up and minor changes

--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -14,14 +14,11 @@
       <li routerLinkActive="active-link" class="nav-item active">
         <a class="nav-link" routerLink="/planner">Planer</a>
       </li>
-      <li class="nav-item active">
+      <li routerLinkActive="active-link" class="nav-item active">
         <a class="nav-link" routerLink="/lernen">Lernen</a>
       </li>
-      <li class="nav-item active">
+      <li routerLinkActive="active-link" class="nav-item active">
         <a class="nav-link" href="/forum">Forum</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Chat</a>
       </li>
       <li routerLinkActive="active-link" class="nav-item active">
         <a class="nav-link" routerLink="/profile/settings">Profil</a>
