small styling fixes

--- a/MeinStudManager/ClientApp/src/app/study/study-page/method-details/method-details.component.html
+++ b/MeinStudManager/ClientApp/src/app/study/study-page/method-details/method-details.component.html
@@ -3,12 +3,13 @@
 border-bottom
 border-dark border-2
 text-start
-p-3"
+p-3
+fs-6"
 style="white-space: pre-line">
   {{method.description}}
 
   <div class="row custom-font border-top mt-2"  *ngFor="let source of method.sources">
-    source: {{source}}
+    quelle: {{source}}
   </div>
 </div>
 
