--- a/MeinStudManager/ClientApp/src/app/study/study-page/todo-list/todo-list.component.html
+++ b/MeinStudManager/ClientApp/src/app/study/study-page/todo-list/todo-list.component.html
@@ -16,6 +16,6 @@
     </li>
   </ul>
 
-  <span style="font-size: x-small;">bitte beachten: Liste speichert nur solange man eingeloggt ist</span>
+  <span class="float-start" style="font-size: x-small;">bitte beachten: Liste speichert nur solange man eingeloggt ist</span>
 
 </div>
