[Frontend] #16 added Anonymous function, fixed HTML encoding on direct Answer

--- a/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.component.css
+++ b/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.component.css
@@ -6,8 +6,8 @@
 }
 
 .editor-bottom-row{
-  display: flexbox;
-  text-align: end;
+  display: flex;
+  justify-content: space-between
 }
 
 .postCreator-title-field{
