--- a/MeinStudManager/ClientApp/src/app/forum/topic/forum-topic.component.css
+++ b/MeinStudManager/ClientApp/src/app/forum/topic/forum-topic.component.css
@@ -44,6 +44,8 @@
   padding-left: 5px;
   padding-right: 5px;
   font-size: 13pt;
+  white-space:nowrap;
+  overflow: hidden;
 }
 
 .reply-message {
