home background an other minor changes

--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -5,7 +5,8 @@
 </div>
 
 
-
+<div class="row">
+  <div class="col-sm-12">
     <ul >
       <li routerLinkActive="active-link"
        class="nav-item active" >
@@ -24,3 +25,6 @@
         <a class="nav-link" routerLink="/profile/settings">Profil</a>
       </li>
     </ul>
+  </div>
+</div>
+
