--- a/MeinStudManager/ClientApp/src/app/header/header.component.css
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.css
@@ -1,6 +1,9 @@
+
 #stud-header {
+  padding-top: 10px;
   background-color: aqua;
   text-align: center;
+  height: 100%;
 }
 ul {
   display: flex;
