--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -1,30 +1,34 @@
-<div class="row">
-  <div class="col-xs-12" id="stud-header">
-   <h1>Mein Studplaner</h1>
+
+  <div class="row">
+    <div class="col-xs-12" id="stud-header">
+     <h1>Mein Studmanager</h1>
+    </div>
   </div>
-</div>
 
 
-<div class="row">
-  <div class="col-sm-12">
-    <ul >
-      <li routerLinkActive="active-link"
-       class="nav-item active" >
-        <a class="nav-link" routerLink="/home" >Home</a>
-      </li>
-      <li routerLinkActive="active-link" class="nav-item active">
-        <a class="nav-link" routerLink="/planner">Planer</a>
-      </li>
-      <li routerLinkActive="active-link" class="nav-item active">
-        <a class="nav-link" routerLink="/lernen">Lernen</a>
-      </li>
-      <li routerLinkActive="active-link" class="nav-item active">
-        <a class="nav-link" href="/forum">Forum</a>
-      </li>
-      <li routerLinkActive="active-link" class="nav-item active">
-        <a class="nav-link" routerLink="/profile/settings">Profil</a>
-      </li>
-    </ul>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <ul >
+        <li routerLinkActive="active-link"
+         class="nav-item active" >
+          <a class="nav-link" routerLink="/home" >Home</a>
+        </li>
+        <li routerLinkActive="active-link" class="nav-item active">
+          <a class="nav-link" routerLink="/planner">Planer</a>
+        </li>
+        <li routerLinkActive="active-link" class="nav-item active">
+          <a class="nav-link" routerLink="/lernen">Lernen</a>
+        </li>
+        <li routerLinkActive="active-link" class="nav-item active">
+          <a class="nav-link" href="/forum">Forum</a>
+        </li>
+        <li routerLinkActive="active-link" class="nav-item active">
+          <a class="nav-link" routerLink="/profile/settings">Profil</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
+
+
 
